# IAM-microservice

./: .env  Cargo.toml  Dockerfile  Dockerfile-prod  README.md  build.rs  docker-compose.yml  dump.sh  jwtRS256.key  restore.sh  sign_jwt.sh
_sql/: feature_subs.sql
docs/: access-right-merging.md  cli-usage.md  database-structure.md  managing-permissions.md  managing-subscriptions-roles.md  project-setup.md  project-usage.md
postgresql/_ddl/: feature_acl.sql  feature_client.sql
postgresql/backups/: iam.backup
postgresql/scripts/: dump.sh  init.sh  restore.sh
proto/: iam.proto
src/: main.rs  tags.rs
src/common/: helper.rs  mod.rs
src/common/database/: mod.rs
src/common/security/: jwt_decoder.rs  jwt_guard.rs  mod.rs
src/common/services/: cashing_service.rs  mod.rs
src/iam/: controller_common.rs  iam_controller.rs  iam_driver.rs  iam_grpc_controller.rs  iam_helper.rs  iam_model.rs  iam_service.rs  mod.rs
