[package]
name = "ms-iam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
async-trait = "0.1.75"
derive_more = "0.99.17"
json = "0.12.4"
serde = { version = "1.0.193", features =  ["derive"]  }
serde_json = "1.0.108"
jsonwebtoken = "9.2.0"
poem = "3.1.6"
poem-openapi = { version= "5.1.5", features = ["swagger-ui"] }
poem-grpc = "0.5.3"
tracing-subscriber = "0.3.18"
jwt = "0.16.0"
base64 = "0.21.5"
sqlx = {version = "0.7.3", features = ["postgres", "runtime-tokio"]}
redis = { version = "0.24.0", features = ["tokio-comp"] }
tracing = "0.1.40"
rmp-serde = "1.1.2"
anyhow = "1.0.79"
prost = "0.13.4"


[build-dependencies]
poem-grpc-build = "0.5.2"
